--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
       rel="stylesheet"
     />
 
-    <title>Document</title>
+    <title>Incentive UK</title>
   </head>
   <body>
     <header>
       <nav
-        class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar-light
-        box-shadow"
+        class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow"
       >
         <div class="container">
-          <a class="navbar-brand"><img class="logo" src="INCENTIVEUK.png"/></a>
+          <a class="navbar-brand"><img class="logo" src="INCENTIVEUK.png" /></a>
         </div>
       </nav>
     </header>
@@ -49,7 +48,7 @@
       <div class="container">
         <div class="hero">
           <div class="main-section-text">
-            <h2 style="font-size:5vw;" class="hero-text">
+            <h2 style="font-size: 5vw;" class="hero-text">
               Incentive for Trading & Services UK Ltd.
             </h2>
           </div>
@@ -149,7 +148,11 @@
     </section>
     <footer class="border-top footer">
       <div class="container">
-        &copy; 2019 - IncentiveUK
+        &copy;
+        <script>
+          document.write(new Date().getFullYear());
+        </script>
+        - IncentiveUK
       </div>
     </footer>
     <script
