--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
       rel="stylesheet"
     />
 
-    <title>Incentive UK</title>
+    <title>Incentive for trading & services UK limited.</title>
+    <meta
+      name="description"
+      content="Incentive UK for trading and services UK Ltd., providing the best possible service for our daily client needs"
+    />
   </head>
   <body>
     <header>
